...
            "state" : "translated",
            "value" : "即将推出"
          }
        }
      }
    },
    "历史记录" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "History"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Historial"
...
            "state" : "translated",
            "value" : "收藏译文"
          }
        }
      }
    },
    "文字" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Text"
...
            "state" : "translated",
            "value" : "点按以编辑原文"
          }
        }
      }
    },
    "相机" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Camera"
...
    "翻译" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Translate"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Traducir"
...
            "state" : "translated",
            "value" : "语言方向"
          }
        }
      }
    },
    "语音" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Voice"
...
            "state" : "translated",
            "value" : "选择翻译语言"
          }
        }
      }
    },
    "选择语言" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Choose Language"
...
